@@ -350,6 +350,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14401) Fix Safari access key tooltips for Windows and >3.1 Mac versions
 * (bug 14432) Fix notice regression in Special:Newpages feed mode
 * (bug 11951) EditPage::getEditToolbar() is now static.
+* (bug 14404) Use of {{int:...}} to generate links no longer breaks links table
+  if user has a custom interface language
 
 
 === API changes in 1.13 ===
